--- a/example/observer.html
+++ b/example/observer.html
@@ -1,6 +1,8 @@
-var observerPattern = require('./observer');
-
+<script type="text/javascript" src="../src/observer/observer.js"></script>
+<script type="text/javascript">
+	
 var subject = new observerPattern.createSubject();
+
 var MyObserverClass = function(id){
 	this.id = id;
 	this.update = function(context){ 
@@ -10,8 +12,11 @@ var MyObserverClass = function(id){
 
 var observer1 = new MyObserverClass(1);
 var observer2 = new MyObserverClass(2);
+
 subject.addObserver(observer1);
 subject.addObserver(observer2);
 
 var context = {data: 'data'};
 subject.notify(context);
+
+</script>
