make simpler directory

--- a/example/observer.html
+++ b/example/observer.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="../src/observer/observer.js"></script>
+<script type="text/javascript" src="../src/observer.js"></script>
 <script type="text/javascript">
 	
 var subject = new observerPattern.createSubject();
